--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ layout: default
 
 <div class="row">
     <div class='col-md-10 col-md-offset-1'>
+            <button type="button" style="background-color: #00acee; color: white;" onclick="history.back()">&#60;</button>
         <div class="input-group input-group-lg col-sm-8 col-sm-offset-2">
             <input type="text" class="form-control" placeholder="Enter your address to find who represents you" id="address" name="address" >
             <span class="input-group-btn">
